<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.db.nimbuzz_app_tabview_by_db.ChatroomFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/joinroom"
        android:id="@+id/textView3"
        android:textSize="30dp"
        android:textColor="#fb05a1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roomname"
        android:id="@+id/textView7"
        android:textSize="25dp"
        android:textColor="#045608"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterroom"
        android:textColor="#053ffd"
        android:id="@+id/enterroombtn"
        android:layout_below="@+id/editText3"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7" />
</RelativeLayout>
